- 15: Accelerator key for breakpoints (also on multiple selection) <Kay Gürtzig>
- 15: Issue #115: Returned arrays now always presented as element list <Kay Gürtzig>
- 15: Enh. #84: Array initialisations now exportable to BASIC code <Kay Gürtzig>
- 15: Bugfix #117: Title and button update on diagram replacement <Kay Gürtzig>
- 15: Bugfix #97: Target selection on dragging stabilized <Kay Gürtzig>

Version 3.23 (2015.12.04)
- 01: executor: fixed a bug in the repeat loop [Sylvio Tabor]
- 02: executor: fixed a bug while interpreting the title [Benjamin Bartsch]
- 03: export: split PNG export into multiple images [Moritz Schulze]
- 04: executor: logical operator in CASE-statement [Lies Callemeyn]
- 05: export: added code export option [Hanspeter Thöni]
- 06: export: added comments to Pascal export [Dirk Wilhelmi]
- 06: export: moved export options into menu [Hanspeter Thöni]
- 07: export: added namespace "nsd" to save files [Treaki]
- 08: added polish translation [Jacek Dzieniewicz]
- 09: new drawing strategy for the IF statement [David Tremain]
- 09: new colorizing strategy for elements [David Tremain]
- 10: visual re-enforcement for drag & drop [David Tremain]
- 11: allow to collapse / expand elements by scrolling the mouse [David Tremain]
- 12: added preferences on how to draw IF statements [David Tremain]
- 13: fixed "empty line" bug [David Tremain]
- 14: fixed a drawing bug while dragging an element [Bob Fisch]
- 15: added a Python generator [Daniel Spittank]
- 16: removed a bug when double clicking en element [Bob Fisch]
- 16: variable highlighting did not work anymore [Andreas Schwierz]
- 17: executor: array support [Gennaro Donnarumma]
- 18: added traditional Chinese translation [Joe Chem]
- 19: multiple improvements <Kay Gürtzig>
- 20: DE: linguistic flaws corrected <Kay Gürtzig>
- 21: major revision of generators files <Kay Gürtzig>
- 22: possibility to switch text/comment in diagram [Samuel Schmidt]
- 23: bug while parsing NSD files [Benedict Thienpont]